--- a/grails-app/assets/javascripts/components/welcome/welcome.view.html
+++ b/grails-app/assets/javascripts/components/welcome/welcome.view.html
@@ -1,8 +1,7 @@
 <div class="welcome">
-  <h1>AngularJS</h1>
-  <h3 class="text-center">
-    <span ng-bind="WelcomeController.superlative"></span>
-  </h3>
+  <h1>Eblana Character System</h1>
+
   
   <player-character id="58"> </player-character>
+  
 </div>
