--- a/grails-app/assets/javascripts/components/welcome/welcome.view.html
+++ b/grails-app/assets/javascripts/components/welcome/welcome.view.html
@@ -1,7 +1,7 @@
 <div class="welcome">
   <h1>Eblana Character System</h1>
 
-  
-  <player-character id="1"> </player-character>
-  
+  <user id="1"></user>
+  <player-character id="1"></player-character>
+  <downtime id="100"></downtime>
 </div>
