--- a/grails-app/assets/javascripts/components/item/item.component.html
+++ b/grails-app/assets/javascripts/components/item/item.component.html
@@ -4,8 +4,7 @@
 		<div id="item">
 			<p class="image__content item__header">Academy of Eblana</p>
 			<div class="image__content item__name">{{vm.item.name}}</div>
-			<div  ng-fi-text ng-fi-text-html="{{ vm.item.power1 }}<br/>{{vm.item.power2}}<br/>
-				Attunes to: {{vm.item.slot}}" class="image__content item__power">
+			<div  ng-fi-text ng-fi-text-html="{{ vm.item.power }}" class="image__content item__power">
 			</div>
 			<div class="image__content item__attunementTime">Attunement
 				Time: {{vm.item.attunementTime}}</div>
