--- a/grails-app/assets/javascripts/components/welcome/welcome.view.html
+++ b/grails-app/assets/javascripts/components/welcome/welcome.view.html
@@ -3,5 +3,6 @@
 
   <user id="1"></user>
   <player-character id="1"></player-character>
-  <downtime id="100"></downtime>
+  <downtime id="650"></downtime>
+  <recipe id="6"></recipe>
 </div>
